index.css
@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@700&display=swap');

:root {
    --text: #ffffff;
    --text-accent: #97ebdb;
    --back: #282b91;
    --back-accent: #1c1f6b;
}

body {
    margin: 0px;
    background: var(--back-accent);
}

p {
    margin: 0px;
    margin-bottom: 20px;
}

li {
    line-break: anywhere;
    padding-right: 20px;
}

subtitle {
    font-size: 13px;
    text-align: center;
    transform: translateY(-20px);
    margin-top: 3px;
    transition: 200ms;
    opacity: 0;
}



.displayed {
    transform: translateY(0px);
    opacity: 1;
}

.media {
    width: 100%;
    border-radius: 50px;
    z-index: 1;
}

.media:hover+subtitle {
    transform: translateY(0px);
    opacity: 1;
}

#topbar {
    height: 32px;
    padding-top: 8px;
    padding-left: 8px;
    padding-right: 8px;
    font-family: "Poppins";
    background-color: var(--back-accent);
    color: var(--text);
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    position: sticky;
    top: 0px;
    z-index: 2;
    -webkit-box-shadow: #00000055 0px 4px 12px;
    box-shadow: #00000055 0px 4px 12px;
}

#left {
    width: 50%;
}

#right {
    width: 50%;
    text-align: right;
}

#header {
    width: 100%;
    height: 250px;
    -o-object-fit: cover;
    object-fit: cover;
}

#background {
    width: 100%;
    height: 250px;
}

#background-img {
    width: 100%;
    height: 100%;
    background-repeat: no-repeat;
    -o-object-fit: cover;
    object-fit: cover;
    -webkit-filter: brightness(0.75);
    filter: brightness(0.75);
}

#main-text {
    width: 100%;
    height: 250px;
    position: absolute;
    text-align: center;
    font-family: "Poppins";
    top: 40px;
    color: var(--text);
    -webkit-backdrop-filter: blur(1px);
    backdrop-filter: blur(1px);
}

#actual-text {
    margin-top: 90px;
    padding: 10px;
}

#section-selector {
    width: 100%;
    height: 100px;
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    background: var(--back-accent);
}

.section {
    font-family: "Poppins";
    width: 25%;
    text-align: center;
    padding-top: 35px;
    -webkit-transition: 200ms;
    -o-transition: 200ms;
    transition: 200ms;
    cursor: pointer;
    background: var(--back);
    color: var(--text);
    font-weight: bold;
    font-size: 20px;
    border-bottom: var(--text) 1px solid;
}

.section:hover {
    background: var(--back-accent);
    width: 27.5%;
    border-bottom: var(--text) 8px solid;
}

.section:active {
    background: var(--back);
    width: 26.25%;
}

#main-content {
    width: 100%;
    font-family: "Poppins";
    background: var(--back);
    color: var(--text);
    overflow-x: hidden;
}

#section-container {
    -webkit-transition: 200ms ease-in;
    -o-transition: 200ms ease-in;
    transition: 200ms ease-in;
    width: 400%;
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
}

.section-text {
    width: 100%;
    padding: 15px;
    display: flex;
    justify-content: center;
}

.constrainer {
    display: flex;
    flex-direction: column;
    width: 60%;
    min-width: 300px;
}

#canvas-container {
    width: 100%;
}

canvas {
    width: 100% !important;
    height: 100% !important;
    border-radius: 50px;
    cursor: all-scroll;
}

#footer {
    font-family: "Poppins";
    color: #fff;
    font-size: 11px;
}

#footer-header {
    margin-left: 10px;
}

@media screen and (max-width: 767px) {
    #topbar {
        height: 55px;
    }

    #main-text {
        top: 63px;
    }
}

@media screen and (max-width: 397px) {
    #topbar {
        height: 75px;
    }

    #main-text {
        top: 83px;
    }

    .section {
        font-size: 15px;
    }

    #video-content {
        width: 100%;
        padding: 0px;
    }

    #video {
        width: calc(100% - 40px);
    }
}

@media screen and (max-width: 314px) {
    #topbar {
        height: 100px;
        position: relative;
    }

    #main-text {
        top: 108px;
    }

    #actual-text {
        font-size: 20px;
    }

    .section {
        font-size: 12px;
    }
}

